@@ -14,6 +14,7 @@
     \item modified \code{multiDel} to not use \code{require}
     \item \code{doubleFluxDel} had a bug if \code{react1} or \code{react2} contained duplicated entries.
     \item documentation of \code{hasEffect} in \code{optsol_genedel} is now clearer.
+    \item \code{.parseBoolean} now gives a warning, but handles empty gpr in a intuitive way.
   }
 }
 
